--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/anubis2"]
 	path = themes/anubis2
 	url = https://github.com/Junyi-99/hugo-theme-anubis2.git
+[submodule "themes/not-much"]
+	path = themes/not-much
+	url = https://github.com/imgios/not-much.git
